updated with the required input from customer